# iroha

./: .dockerignore  .gitignore  .rustfmt.toml  0001-feat-IrohaSwift-add-Codable-support-for-offline-tran.patch  2026-01-30-pipeline-status-investigation.md  2026-annual-hyperledger-iroha.md  AGENTS.am.md  AGENTS.ar.md  AGENTS.az.md  AGENTS.ba.md  AGENTS.dz.md  AGENTS.es.md  AGENTS.fr.md  AGENTS.he.md  AGENTS.hy.md  AGENTS.ja.md  AGENTS.ka.md  AGENTS.kk.md  AGENTS.md  AGENTS.mn.md  AGENTS.my.md  AGENTS.pt.md  AGENTS.ru.md  AGENTS.ur.md  AGENTS.uz.md  AGENTS.zh-hans.md  AGENTS.zh-hant.md  CHANGELOG.am.md  CHANGELOG.ar.md  CHANGELOG.az.md  CHANGELOG.ba.md  CHANGELOG.dz.md  CHANGELOG.es.md  CHANGELOG.fr.md  CHANGELOG.he.md  CHANGELOG.hy.md  CHANGELOG.ja.md  CHANGELOG.ka.md  CHANGELOG.kk.md  CHANGELOG.md  (+357 more)
crates/build-support/: Cargo.toml  script.rs
crates/build-support/src/: lib.rs
crates/connect_norito_bridge/: Cargo.toml  NoritoBridge.podspec.template  Package.swift.template  RELEASE_NOTES.md  module.modulemap.template
crates/connect_norito_bridge/include/: NoritoBridge.h  connect_norito_bridge.h
crates/connect_norito_bridge/src/: lib.rs
crates/connect_norito_bridge/tests/: decode_live_envelope_hex.rs
crates/fastpq_prover/: Cargo.toml  build.rs
crates/fastpq_prover/benches/: planner.rs
crates/fastpq_prover/cuda/: fastpq_cuda.cu
crates/fastpq_prover/fuzz/: Cargo.toml
crates/fastpq_prover/src/: axt_binding.rs  backend.rs  batch.rs  bn254.rs  cyclotomic.rs  digest.rs  error.rs  fastpq_cuda.rs  fft.rs  gpu.rs  gpu_stub.rs  lib.rs  metal.rs  metal_config.rs  offline_merge.rs  ordering.rs  overrides.rs  packing.rs  poseidon.rs  poseidon_manifest.rs  proof.rs  trace.rs
crates/fastpq_prover/tests/: backend_regression.rs  document_examples.rs  packing.rs  perf_production.rs  poseidon_manifest_consistency.rs  proof_fixture.rs  realistic_flows.rs  trace_commitment.rs  transcript_replay.rs
crates/iroha/: Cargo.toml  README.md
crates/iroha/benches/: one_block.rs
crates/iroha/examples/: tutorial.rs
crates/iroha/src/: account_address.rs  client.rs  config.rs  da.rs  http.rs  http_default.rs  lib.rs  nexus.rs  query.rs  secrecy.rs  sm.rs  sns.rs  subscriptions.rs
crates/iroha/tests/: config.rs  fee.rs  (+13 more)
crates/iroha_audio/: Cargo.toml
crates/iroha_authorizer/: Cargo.toml
crates/iroha_cli/: Cargo.toml  CommandLineHelp.md  README.md  build.rs
crates/iroha_config/: Cargo.toml  iroha_test_config.toml
crates/iroha_core/: AGENTS.md  Cargo.toml  blocks.data  blocks.hashes  blocks.index  build.rs  commit-rosters.norito
crates/iroha_crypto/: Cargo.toml
crates/iroha_data_model/: AGENTS.md  Cargo.toml  README.md  build.rs  build_consts.rs  keywords.txt  non_transparent_api.rs  transparent_api.rs
crates/iroha_data_model_derive/: Cargo.toml
crates/iroha_derive/: Cargo.toml  core
crates/iroha_derive_primitives/: Cargo.toml
crates/iroha_executor_data_model/: Cargo.toml
crates/iroha_executor_data_model_derive/: Cargo.toml
crates/iroha_executor_derive/: Cargo.toml
crates/iroha_ffi/: Cargo.toml
crates/iroha_file_mmap/: Cargo.toml
crates/iroha_futures/: Cargo.toml
crates/iroha_genesis/: Cargo.toml
crates/iroha_i18n/: Cargo.toml
crates/iroha_js_host/: Cargo.toml  build.rs
crates/iroha_kagami/: Cargo.toml  CommandLineHelp.md  README.md  build.rs
crates/iroha_macro/: Cargo.toml  README.md
crates/iroha_monitor/: Cargo.toml
fuzz/: Cargo.toml  README.md  corpora.json  da_ingest_schema.rs  da_replay_cache.rs  lane_relay_envelope.rs  proof_stream_transport.rs  sm_corpus_manifest.json  soranet_handshake.rs
fuzz/cli_dsl/: grant_permission.json  multisig_set_key_value.json  revoke_permission.json  unregister_asset.json
fuzz/manifests/: torii_contract_minimal.json
fuzz/sorafs_chunker/: sf1_profile_v1_backpressure.json
integration_tests/: AGENTS.md  Cargo.toml  README.md  build.rs
integration_tests/src/: lib.rs  metrics.rs  sandbox.rs  sorafs_gateway_capability_refusal.rs  sorafs_gateway_conformance.rs  sync.rs
integration_tests/tests/: address_canonicalisation.rs  app_api_canonical_auth.rs  asset.rs  asset_propagation.rs  byte_merkle_cross.rs  byte_merkle_path.rs  concurrency.rs  config.rs  contracts.rs  da.rs  debug_genesis.rs  domain_links.rs  fast_dsl_build.rs  fraud_monitoring.rs  genesis_json.rs  iroha_cli.rs  iterable_queries_torii.rs  iterable_query_smoke.rs  ivm_header_decode.rs  ivm_header_smoke.rs  kotodama_examples.rs  merkle_unified.rs  misc.rs  mod.rs  multisig.rs  nft.rs  non_mintable.rs  norito_burn_fixture.rs  norito_streaming_end_to_end.rs  norito_streaming_fec.rs  norito_streaming_feedback.rs  norito_streaming_negative.rs  norito_streaming_roundtrip.rs  observer_sync.rs  offline_allowance_security.rs  pagination.rs  permissions.rs  pipeline_block_rejected.rs  proof_from_path.rs  proofs.rs  (+50 more)
xtask/: Cargo.toml
xtask/src/: address_gate.rs  address_manifest.rs  codec.rs  compute.rs  compute_harness.rs  da.rs  docs_preview.rs  fastpq.rs  gar.rs  gar_bus.rs  i3_bench_suite.rs  i3_slo_harness.rs  kagami_profiles.rs  main.rs  ministry.rs  ministry_agenda.rs  ministry_jury.rs  ministry_panel.rs  mochi.rs  nexus.rs  nexus_lane_maintenance.rs  norito_rpc.rs  offline_bundle.rs  offline_pos_provision.rs  offline_pos_verify.rs  offline_poseidon.rs  offline_provision.rs  offline_tooling.rs  offline_topup.rs  poseidon_bench.rs  sm.rs  sns.rs  soradns.rs  sorafs.rs  soranet.rs  soranet_billing.rs  soranet_bug_bounty.rs  soranet_chaos.rs  soranet_gar_controller.rs  soranet_gateway.rs  (+18 more)
xtask/tests/: address_vectors.rs  android_dashboard_parity_cli.rs  codec_rans_tables.rs  da_proof_bench.rs  iso_bridge_lint.rs  ministry_agenda.rs  mochi_bundle.rs  sm_wycheproof_sync.rs  sns_catalog_verify.rs  soradns_cli.rs  sorafs_compat.rs  sorafs_fetch_fixture.rs  soranet_billing_m0.rs  soranet_bug_bounty.rs  soranet_chaos.rs  soranet_gateway_billing.rs  soranet_gateway_billing_m0.rs  soranet_gateway_m0.rs  soranet_gateway_m1.rs  soranet_gateway_m2.rs  soranet_gateway_ops_m0.rs  soranet_pop_template.rs  streaming_bundle_check.rs  streaming_entropy_bench.rs
(+36513 files in other folders)
