[package]
name = "build-support"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
norito = { workspace = true, optional = true }

[features]
default = ["norito-json"]
norito-json = ["dep:norito"]

[lib]
bench = false

[[bin]]
name = "clippy-inventory"
path = "src/bin/clippy_inventory.rs"
required-features = ["norito-json"]

[[bin]]
name = "sumeragi_baseline_report"
path = "src/bin/sumeragi_baseline_report.rs"
required-features = ["norito-json"]

[[bin]]
name = "sumeragi_da_report"
path = "src/bin/sumeragi_da_report.rs"
required-features = ["norito-json"]
