[package]
name = "connect_norito_bridge"
version.workspace = true
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
norito = { path = "../norito", version = "2.0.0-rc.2.0", default-features = false, features = ["std", "derive", "json", "json-std-io", "columnar", "strict-safe"] }
iroha_torii_shared = { workspace = true }
iroha_crypto = { workspace = true, default-features = false, features = ["std"] }
iroha_data_model = { workspace = true }
iroha_executor_data_model = { workspace = true }
iroha_primitives = { workspace = true }
ivm = { workspace = true }
libc = "0.2.177"
blake3.workspace = true
base64 = { workspace = true }
hex = "0.4"
x25519-dalek = "2.0.1"
sorafs_car = { workspace = true, features = ["manifest"] }
sha2 = { version = "0.10.8", default-features = false, features = ["std"] }
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["alloc", "zeroize"] }
blake2 = { version = "0.10.6", default-features = false, features = ["std"] }
rand = { version = "0.9.2", default-features = false, features = ["std", "std_rng"] }
tracing.workspace = true
zeroize = { version = "1.8.2", default-features = false, features = ["alloc", "std"] }

[dev-dependencies]
tempfile = { workspace = true }
sorafs_chunker = { workspace = true }

[target.'cfg(any(target_os = "android", target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
jni = { version = "0.21.1", default-features = false }
