[package]
name = "iroha_cli"

edition.workspace = true
version.workspace = true
authors.workspace = true

description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

license.workspace = true
keywords.workspace = true
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]

[lints]
workspace = true

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/hyperledger-iroha/iroha" }
is-it-maintained-open-issues = { repository = "https://github.com/hyperledger-iroha/iroha" }
maintenance = { status = "actively-developed" }

[[bin]]
name = "iroha"
path = "src/main.rs"

[dependencies]
iroha = { workspace = true }
iroha_primitives = { workspace = true }
iroha_schema = { workspace = true }
iroha_schema_gen = { workspace = true }
iroha_genesis = { workspace = true }
iroha_data_model = { workspace = true }
iroha_wasm_builder = { workspace = true }
spinoff = { workspace = true, features = ["binary"] }
owo-colors = { workspace = true, features = ["supports-colors"] }
wasmtime = { workspace = true }

thiserror = { workspace = true }
error-stack = { workspace = true, features = ["eyre"] }
eyre = { workspace = true }
clap = { workspace = true, features = ["derive"] }
humantime = { workspace = true }
json5 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
erased-serde = "0.4.5"
supports-color = { workspace = true }
derive_more = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
futures = { workspace = true }
parity-scale-codec = { workspace = true }
colored = "2.1.0"

[build-dependencies]
vergen = { version = "8.3.1", default-features = false }
color-eyre = "0.6.3"
parity-scale-codec = { workspace = true }
iroha_data_model = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
