[package]
name = "iroha_config"

edition.workspace = true
version.workspace = true
authors.workspace = true

license.workspace = true

[lints]
workspace = true

[features]
default = []
gost = ["iroha_crypto/gost", "iroha_data_model/gost"]
sm = ["iroha_crypto/sm", "iroha_data_model/sm"]
sm-ffi-openssl = []

[dependencies]
iroha_config_base = { workspace = true }
iroha_data_model = { workspace = true }
iroha_primitives = { workspace = true }
iroha_crypto = { workspace = true }
norito = {workspace = true}
error-stack = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "ansi", "env-filter"] }
log = "0.4.28"
url.workspace = true
strum = { workspace = true, features = ["derive", "std"] }
thiserror = { workspace = true }
nonzero_ext = { workspace = true }
hex = { workspace = true, features = ["std"] }
soranet_pq = { workspace = true }
rust_decimal = { workspace = true, default-features = false, features = ["std"] }
iroha_torii_shared = { workspace = true }
toml = { workspace = true }


[dev-dependencies]
expect-test = { workspace = true }
assertables = { workspace = true }
iroha_crypto = { workspace = true, features = ["rand", "gost"] }
norito = {workspace = true}
